feat:拆分 DefaultAgentLoopService 职责